# fr0g-protocol

v0.2.0/: NOTICE  README.md  pyproject.toml  sample.html
v0.2.0/fr0g/: __init__.py  ed25519_ext.py  fr0g.js  fr0g.py  index2.html  index3.html
v0.2.0/fr0g/application/: diagnostics.py  download.py  tx_utils.py  upload.py
v0.2.0/fr0g/core/: protocol.py
